package vchat.logging

case class ErrorDescription(
    reason: String,
    todo: String,
    reference: String
)
