package vchat.logging.exception

/**
  * アプリケーションが想定している種類の例外
  */
trait AppException extends RuntimeException
